[package]
name = "skylight"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
atrium-api = { version = "0.25.3", features = ["agent", "bluesky"] }
atrium-repo = "0.1.3"
atrium-xrpc-client = "0.5.14"
futures = { version = "0.3.31", features = ["alloc"] }
governor = "0.8.0"
rs-car = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_ipld_dagcbor = "0.6.3"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
