[package]
name = "skylight"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.98"
atrium-api = { version = "0.25.3", features = ["agent", "bluesky"] }
atrium-repo = "0.1.3"
atrium-xrpc = "0.12.3"
atrium-xrpc-client = "0.5.14"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
futures = { version = "0.3.31", features = ["alloc"] }
governor = "0.8.0"
http = "1.3.1"
rand = "0.9.1"
reqwest = { version = "0.12.20", features = ["json"] }
rs-car = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_ipld_dagcbor = "0.6.3"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[patch.crates-io]
atrium-xrpc = { path = "patches/atrium/atrium-xrpc" }
